--- a/backend/package.json
+++ b/backend/package.json
@@ -6,5 +6,9 @@
     "@types/node": "^22.15.18",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "mammoth": "^1.9.0",
+    "pdf-parse": "^1.1.1"
   }
 }
