--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,11 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@types/tesseract.js": "^0.0.2",
+    "canvas": "^3.1.0",
     "mammoth": "^1.9.0",
-    "pdf-parse": "^1.1.1"
+    "pdf-lib": "^1.17.1",
+    "pdf-parse": "^1.1.1",
+    "tesseract.js": "^6.0.1"
   }
 }
