--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,8 +20,10 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.344.0",
+    "mammoth": "^1.9.0",
     "mongoose": "^8.14.1",
     "multer": "^1.4.5-lts.2",
+    "pdf-parse": "^1.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.30.0",
@@ -51,6 +53,7 @@
     "nodemon": "^3.1.10",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
+    "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.3.0",
     "vite": "^5.4.19",
