--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lucide-react": "^0.344.0",
     "mongoose": "^8.14.1",
     "multer": "^1.4.5-lts.2",
+    "pdf-poppler": "^0.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.30.0",
