--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@radix-ui/react-icons": "^1.3.2",
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
