--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "dev": "nodemon app.ts"
+    "dev": "nodemon --exec ts-node app.ts",
+    "start": "ts-node app.ts"
   },
   "devDependencies": {
     "@types/node": "^22.15.18",
@@ -13,6 +14,11 @@
     "mammoth": "^1.9.0",
     "pdf-lib": "^1.17.1",
     "pdf-parse": "^1.1.1",
-    "tesseract.js": "^6.0.1"
+    "tesseract.js": "^6.0.1",
+    "express": "^4.18.2",
+    "typescript": "^5.0.0",
+    "ts-node": "^10.9.1",
+    "@types/node": "^18.0.0",
+    "nodemon": "^3.0.0"
   }
 }
