--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/axios": "^0.9.36",
+    "@types/express": "^5.0.2",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.15.18",
     "@types/react": "^18.3.21",
