--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.344.0",
+    "mammoth": "^1.9.0",
     "mongoose": "^8.14.1",
     "multer": "^1.4.5-lts.2",
+    "pdf-parse": "^1.1.1",
     "pdf-poppler": "^0.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -37,6 +39,7 @@
     "@types/express": "^5.0.2",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.15.18",
+    "@types/pdf-parse": "^1.1.5",
     "@types/react": "^18.3.21",
     "@types/react-dom": "^18.3.7",
     "@types/react-router-dom": "^5.3.3",
